#
# CMakeLists.txt - cmake build file for API Design examples
#
# Martin Reddy, 1 Jan 2010 - http://APIBook.com/
#

# Declare the minimum version of cmake that we need
cmake_minimum_required(VERSION 2.4)

# Specify the subdirectories to build
add_subdirectory(stack_c)
add_subdirectory(stack_cpp)
add_subdirectory(stack_template)
add_subdirectory(stack_preprocessor)
add_subdirectory(stack_datadriven)
